--- a/productstyle.css
+++ b/productstyle.css
@@ -222,7 +222,7 @@ display: flex;
 align-items: center;
 gap: 15px;
 padding:15px;
-background-color: #f9f9f9;
+background-color: #fef8f8;
 border-radius: 8px;
 margin-bottom: 20px;
 }
